[tool.poetry]
name = "aws-credential-process"
version = "0.10.0"
description = "AWS Credential Process"
authors = ["Dick Marinus <dick@mrns.nl>"]
readme = "README.md"
repository = "https://github.com/meeuw/aws-credential-process"
keywords = ['AWS', 'MFA', 'keyring', 'keychain', 'yubikey']

[tool.poetry.dependencies]
python = ">=3.6"
boto3 = "^1.11"
keyring = ">=20.0.1"
yubikey-manager = "3.1.1"
click = "^7.1"
pynentry = "^0.1.3"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pytest-cov = "^2.10"
pylint = "^2.4"
freezegun = "^0.3.12"
moto = "^1.3"

[tool.poetry.scripts]
aws-credential-process = 'aws_credential_process:click_main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
