[tool.poetry]
name = "aws-credential-process"
version = "0.17.0"
description = "AWS Credential Process"
authors = ["Dick Marinus <dick@mrns.nl>"]
readme = "README.md"
repository = "https://github.com/meeuw/aws-credential-process"
keywords = ['AWS', 'MFA', 'keyring', 'keychain', 'yubikey']

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
boto3 = "^1"
keyring = ">=20.0.1"
yubikey-manager = "4.0.9"
click = "^8.1"
pynentry = "^0.1"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^7"
pytest-cov = "^3"
pylint = "^2.4"
freezegun = "^0.3.12"
moto = "^1.3"

[tool.poetry.scripts]
aws-credential-process = 'aws_credential_process:click_main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
